--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
   <script>
-    var client  = mqtt.connect('mqtt://localhost:1883');
-  
+    var mqttHost = '192.168.99.100'
+    var mqttPort = 9001
+    
+    var client  = mqtt.connect('mqtt://' + mqttHost + ':' + mqttPort)
+
     client.subscribe('position')
 
     client.on('message', function (topic, message) {
       // message is Buffer
       console.log(message.toString())
       document.getElementById('content').innerHTML = message.toString()
-      client.end()
+      // client.end()
     })
   </script>
 </html>
